--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="footer" style="position:fixed;width: 100%;text-align: center;bottom: 0px;display: block;">
         <div style="height: 20px">
             <div class="info">
-                <a href="https://github.com/bestZwei/img2ipfs">项目地址</a>
+                <a href="https://github.com/bestZwei/ipfsbed">项目地址</a>
             </div>
         </div>
         © 2021-2024
