--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
                     <button onclick="changeGateway(this);" value="https://i0.img2ipfs.com" id="img2ipfs">中国1</button>
                     <button onclick="changeGateway(this);" value="https://ipfs.crossbell.io" id="crossbell">中国2</button>
                     <button onclick="changeGateway(this);" value="https://gateway.ipfsscan.io" id="gateway">中国3</button>
+                    <button onclick="changeGateway(this);" value="https://ipfs.cyou" id="ipfs-cyou">国际2</button>
+                    <button onclick="changeGateway(this);" value="https://trustless-gateway.link" id="trustless">国际3</button>
+                    <button onclick="changeGateway(this);" value="https://ipfs.runfission.com" id="runfission">国际4</button>
+                    <button onclick="changeGateway(this);" value="https://gateway.pinata.cloud" id="pinata">国际5</button>
+                    <button onclick="changeGateway(this);" value="https://hardbin.com" id="hardbin">国际6</button>
+                    <button onclick="changeGateway(this);" value="https://4everland.io" id="4everland">国际7</button>
                 </div>
                 <div class="button-group">
                     <button onclick="copyAllLinks();" name="xkx" id="copyAll">复制全部</button>
