--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
         <div class="filelist">
             <div class="title">上传列表
                 <div class="button-group">
-                    <button title="ipfs.io永久链接国内不能访问" class="gateway-button">网关<span class="tooltiptext">ipfs.io永久链接国内不能访问| 其它几个都支持中国访问</span></button>
-                    <button onclick="changeGateway(this);" value="https://ipfs.io" id="ipfs">国际1</button>
+                    <button title="ipfs.io永久链接国内不能访问" class="gateway-button">网关<span class="tooltiptext">ipfs.io官方网关已被GFW阻断| 其它几个都支持中国访问</span></button>
+                    <button onclick="changeGateway(this);" value="https://ipfs.io" id="ipfs">官方</button>
                     <button onclick="changeGateway(this);" value="https://i0.img2ipfs.com" id="img2ipfs">中国1</button>
                     <button onclick="changeGateway(this);" value="https://ipfs.crossbell.io" id="crossbell">中国2</button>
                     <button onclick="changeGateway(this);" value="https://gateway.ipfsscan.io" id="gateway">中国3</button>
-                    <button onclick="changeGateway(this);" value="https://ipfs.cyou" id="ipfs-cyou">国际2</button>
-                    <button onclick="changeGateway(this);" value="https://trustless-gateway.link" id="trustless">国际3</button>
-                    <button onclick="changeGateway(this);" value="https://ipfs.runfission.com" id="runfission">国际4</button>
-                    <button onclick="changeGateway(this);" value="https://gateway.pinata.cloud" id="pinata">国际5</button>
-                    <button onclick="changeGateway(this);" value="https://hardbin.com" id="hardbin">国际6</button>
-                    <button onclick="changeGateway(this);" value="https://4everland.io" id="4everland">国际7</button>
+                    <button onclick="changeGateway(this);" value="https://ipfs.cyou" id="ipfs-cyou">国际1</button>
+                    <button onclick="changeGateway(this);" value="https://trustless-gateway.link" id="trustless">国际2</button>
+                    <button onclick="changeGateway(this);" value="https://ipfs.runfission.com" id="runfission">国际3</button>
+                    <button onclick="changeGateway(this);" value="https://gateway.pinata.cloud" id="pinata">国际4</button>
+                    <button onclick="changeGateway(this);" value="https://hardbin.com" id="hardbin">国际5</button>
+                    <button onclick="changeGateway(this);" value="https://4everland.io" id="4everland">国际6</button>
                 </div>
                 <div class="button-group">
                     <button onclick="copyAllLinks();" name="xkx" id="copyAll">复制全部</button>
