--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IPFS Image Hosting</title>
-    <meta name="keywords" content="IPFS Image Hosting, IPFS, Decentralized Image Hosting, Permanent Image Hosting">
+    <title>IPFS图床</title>
+    <meta name="keywords" content="IPFS图床,IPFS,去中心化图床,永久图床">
     <link rel="shortcut icon" href="https://pic.rmb.bdstatic.com/bjh/7f258369bc7cae227053a6588adb2453.png">
     <link rel="stylesheet" href="./static/style.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
@@ -15,35 +15,35 @@
     <div class="container">
         <div class="upload">
             <div class="title">
-                IPFS Image Hosting<small style="font-size:10px;">(Files are uploaded to the IPFS)</small>
+                IPFS图床<small style="font-size:10px;">(文件传到ipfs星际文件系统)</small>
             </div>
             <div class="content" id="dragbox">
                 <svg class="icon" viewBox="0 0 1335 1024" xmlns="http://www.w3.org/2000/svg">
                     <path d="M1097.060174 392.125217C1073.730783 172.966957 893.261913 0.378435 666.089739 0.378435c-227.127652 0-415.610435 171.920696-430.948174 391.746782C101.910261 415.454609 0 525.356522 0 666.601739c0 149.147826 125.239652 274.476522 274.476522 274.476522h195.828869v-78.669913H274.476522a193.691826 193.691826 0 0 1-195.940174-195.806609c0-102.021565 70.678261-180.580174 172.588522-195.917913l54.561391-8.013913 8.013913-62.553043c16.005565-180.580174 172.588522-321.157565 352.389565-321.157566 180.580174 0 337.029565 141.356522 352.389565 321.157566v62.553043l62.664348 8.013913c101.910261 16.005565 172.477217 93.896348 172.477218 195.917913 0 109.901913-85.904696 195.806609-195.806609 195.806609h-195.917913v78.580869h196.029217c149.147826 0 274.476522-125.261913 274.476522-274.476521 0-141.133913-101.999304-259.072-235.25287-274.387479" fill="#909399"></path>
                     <path d="M612.218435 364.766609l1.335652 2.003478L389.698783 590.58087l55.229217 55.362782 181.938087-181.938087V1018.88h78.558609v-78.58087h156.471652-156.471652V458.039652l183.808 183.919305 55.340521-55.340522-277.147826-277.058783-55.229217 55.229218z m-141.913044 575.666087h156.471652-156.716521 0.222608z" fill="#909399"></path>
                 </svg>
-                <p class="desc">Click to upload / Paste to upload / Drag to upload</p>
-                <p class="desc">Permanently decentralized storage and sharing of files</p>
+                <p class="desc">点击上传 / 粘贴上传 / 拖拽上传</p>
+                <p class="desc">永久的、去中心化保存和共享文件</p>
             </div>
         </div>
         <div class="filelist">
-            <div class="title">Upload List
+            <div class="title">上传列表
                 <div class="button-group">
-                    <button title="ipfs.io links may not be accessible in some regions" class="gateway-button">Gateway<span class="tooltiptext">ipfs.io official gateway may be blocked by GFW | Others are accessible in China</span></button>
-                    <button onclick="changeGateway(this);" value="https://cdn.ipfsscan.io" id="default">Default Gateway</button>
-                    <button onclick="changeGateway(this);" value="https://ipfs.io" id="ipfs">Official Gateway</button>
-                    <button onclick="changeGateway(this);" value="https://i0.img2ipfs.com" id="img2ipfs">Gateway 1</button>
-                    <button onclick="changeGateway(this);" value="https://ipfs.crossbell.io" id="crossbell">Gateway 2</button>
-                    <button onclick="changeGateway(this);" value="https://gateway.ipfsscan.io" id="gateway">Gateway 3</button>
-                    <button onclick="changeGateway(this);" value="https://ipfs.cyou" id="ipfs-cyou">Gateway 4</button>
-                    <button onclick="changeGateway(this);" value="https://gateway.pinata.cloud" id="pinata">Gateway 5</button>
-                    <button onclick="changeGateway(this);" value="https://hardbin.com" id="hardbin">Gateway 6</button>
-                    <button onclick="changeGateway(this);" value="https://dlunar.net" id="dlunar">Gateway 7</button>
-                    <button onclick="changeGateway(this);" value="https://w3s.link" id="w3s">Gateway 8</button>
-                    <button onclick="changeGateway(this);" value="https://dweb.link" id="dweb">Gateway 9</button>
+                    <button title="ipfs.io永久链接国内不能访问" class="gateway-button">网关<span class="tooltiptext">ipfs.io官方网关已被GFW阻断| 其它几个都支持中国访问</span></button>
+                    <button onclick="changeGateway(this);" value="https://cdn.ipfsscan.io" id="default">默认网关</button>
+                    <button onclick="changeGateway(this);" value="https://ipfs.io" id="ipfs">官方网关</button>
+                    <button onclick="changeGateway(this);" value="https://i0.img2ipfs.com" id="img2ipfs">网关1</button>
+                    <button onclick="changeGateway(this);" value="https://ipfs.crossbell.io" id="crossbell">网关2</button>
+                    <button onclick="changeGateway(this);" value="https://gateway.ipfsscan.io" id="gateway">网关3</button>
+                    <button onclick="changeGateway(this);" value="https://ipfs.cyou" id="ipfs-cyou">网关4</button>
+                    <button onclick="changeGateway(this);" value="https://gateway.pinata.cloud" id="pinata">网关5</button>
+                    <button onclick="changeGateway(this);" value="https://hardbin.com" id="hardbin">网关6</button>
+                    <button onclick="changeGateway(this);" value="https://dlunar.net" id="dlunar">网关7</button>
+                    <button onclick="changeGateway(this);" value="https://w3s.link" id="w3s">网关8</button>
+                    <button onclick="changeGateway(this);" value="https://dweb.link" id="dweb">网关9</button>
                 </div>
                 <div class="button-group">
-                    <button onclick="copyAllLinks();" name="xkx" id="copyAll">Copy All</button>
+                    <button onclick="copyAllLinks();" name="xkx" id="copyAll">复制全部</button>
                     <button onclick="selectFormat(this);" name="xkx" id="_url">URL</button>
                     <button onclick="selectFormat(this);" name="xkx" id="_html">HTML</button>
                     <button onclick="selectFormat(this);" name="xkx" id="_Ubb">UBB</button>
@@ -56,8 +56,8 @@
     <div id="footer" style="position:fixed;width: 100%;text-align: center;bottom: 0px;display: block;">
         <div style="height: 20px">
             <div class="info">
-                <a href="https://github.com/bestZwei/ipfsbed">Github</a> | 
-                <a href="https://ipfs.github.io/public-gateway-checker/">More Gateways</a>
+                <a href="https://github.com/bestZwei/ipfsbed">项目地址</a> | 
+                <a href="https://ipfs.github.io/public-gateway-checker/">更多网关</a>
             </div>
         </div>
         © 2021-2024
