--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IPFS图床</title>
-    <meta name="keywords" content="IPFS图床,IPFS,去中心化图床,永久图床">
+    <meta name="keywords" content="IPFS图床,图床,文件床,IPFS,去中心化图床">
     <link rel="shortcut icon" href="https://pic.rmb.bdstatic.com/bjh/7f258369bc7cae227053a6588adb2453.png">
     <link rel="stylesheet" href="./static/style.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
@@ -41,6 +41,8 @@
                     <button onclick="changeGateway(this);" value="https://dlunar.net" id="dlunar">网关7</button>
                     <button onclick="changeGateway(this);" value="https://w3s.link" id="w3s">网关8</button>
                     <button onclick="changeGateway(this);" value="https://dweb.link" id="dweb">网关9</button>
+                    <button onclick="changeGateway(this);" value="https://ipfs.infura-ipfs.io" id="infura">网关10</button>
+                    <button onclick="changeGateway(this);" value="https://ipfs.runfission.com" id="runfission">网关11</button>
                 </div>
                 <div class="button-group">
                     <button onclick="copyAllLinks();" name="xkx" id="copyAll">复制全部</button>
