--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="button-group">
                     <button onclick="changeGateway(this);" value="https://cdn.ipfsscan.io" id="default">国内网关</button>
                     <button onclick="changeGateway(this);" value="https://ipfs.io" id="ipfs">官方网关</button>
-                    <button onclick="changeGateway(this);" value="https://i0.img2ipfs.com" id="cdn">网关1</button>
+                    <button onclick="changeGateway(this);" value="https://i0.img2ipfs.com" id="img2ipfs">网关1</button>
                     <button onclick="changeGateway(this);" value="https://ipfs.crossbell.io" id="crossbell">网关2</button>
                     <button onclick="changeGateway(this);" value="https://gateway.ipfsscan.io" id="gateway">网关3</button>
                     <button onclick="changeGateway(this);" value="https://ipfs.cyou" id="ipfs-cyou">网关4</button>
