--- a/index.html
+++ b/index.html
@@ -29,25 +29,18 @@
         <div class="filelist">
             <div class="title">上传列表
                 <div class="button-group">
-                    <select id="uploadGateway">
-                        <option value="https://cdn.ipfsscan.io/api/v0/add?pin=false">国内网关</option>
-                        <option value="https://ipfs.infura.io:5001/api/v0/add">Infura网关</option>
-                        <option value="https://crustwebsites.net/api/v0/add">Crust网关</option>
-                    </select>
-                    <select id="accessGateway">
-                        <option value="https://cdn.ipfsscan.io/ipfs/">国内网关</option>
-                        <option value="https://ipfs.io/ipfs/">官方网关</option>
-                        <option value="https://i0.img2ipfs.com/ipfs/">网关1</option>
-                        <option value="https://ipfs.crossbell.io/ipfs/">网关2</option>
-                        <option value="https://gateway.ipfsscan.io/ipfs/">网关3</option>
-                        <option value="https://ipfs.cyou/ipfs/">网关4</option>
-                        <option value="https://gateway.pinata.cloud/ipfs/">网关5</option>
-                        <option value="https://hardbin.com/ipfs/">网关6</option>
-                        <option value="https://dlunar.net/ipfs/">网关7</option>
-                        <option value="https://w3s.link/ipfs/">网关8</option>
-                        <option value="https://dweb.link/ipfs/">网关9</option>
-                        <option value="https://ipfs.infura-ipfs.io/ipfs/">网关10</option>
-                    </select>
+                    <button onclick="changeGateway(this);" value="https://cdn.ipfsscan.io" id="default">国内网关</button>
+                    <button onclick="changeGateway(this);" value="https://ipfs.io" id="ipfs">官方网关</button>
+                    <button onclick="changeGateway(this);" value="https://i0.img2ipfs.com" id="img2ipfs">网关1</button>
+                    <button onclick="changeGateway(this);" value="https://ipfs.crossbell.io" id="crossbell">网关2</button>
+                    <button onclick="changeGateway(this);" value="https://gateway.ipfsscan.io" id="gateway">网关3</button>
+                    <button onclick="changeGateway(this);" value="https://ipfs.cyou" id="ipfs-cyou">网关4</button>
+                    <button onclick="changeGateway(this);" value="https://gateway.pinata.cloud" id="pinata">网关5</button>
+                    <button onclick="changeGateway(this);" value="https://hardbin.com" id="hardbin">网关6</button>
+                    <button onclick="changeGateway(this);" value="https://dlunar.net" id="dlunar">网关7</button>
+                    <button onclick="changeGateway(this);" value="https://w3s.link" id="w3s">网关8</button>
+                    <button onclick="changeGateway(this);" value="https://dweb.link" id="dweb">网关9</button>
+                    <button onclick="changeGateway(this);" value="https://ipfs.infura-ipfs.io" id="infura">网关10</button>
                 </div>
                 <div class="button-group">
                     <button onclick="selectFormat(this);" name="xkx" id="_url">URL</button>
