--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
         <div class="filelist">
             <div class="title">上传列表
                 <div class="select-group">
+                    <label for="gatewaySelect">访问网关：</label>
                     <select id="gatewaySelect" onchange="changeGateway(this);">
+                        <option value="https://i0.img2ipfs.com">网关1</option>
                         <option value="https://cdn.ipfsscan.io">国内网关</option>
                         <option value="https://ipfs.io">官方网关</option>
-                        <option value="https://i0.img2ipfs.com">网关1</option>
                         <option value="https://ipfs.crossbell.io">网关2</option>
                         <option value="https://gateway.ipfsscan.io">网关3</option>
                         <option value="https://ipfs.cyou">网关4</option>
