--- a/index.html
+++ b/index.html
@@ -27,30 +27,31 @@
             </div>
         </div>
         <div class="filelist">
-            <div class="title">上传列表
-                <div class="select-group">
-                    <label for="gatewaySelect">访问网关：</label>
-                    <select id="gatewaySelect" onchange="changeGateway(this);">
-                        <option value="https://i0.img2ipfs.com">网关1</option>
-                        <option value="https://cdn.ipfsscan.io">国内网关</option>
-                        <option value="https://ipfs.io">官方网关</option>
-                        <option value="https://ipfs.crossbell.io">网关2</option>
-                        <option value="https://gateway.ipfsscan.io">网关3</option>
-                        <option value="https://ipfs.cyou">网关4</option>
-                        <option value="https://gateway.pinata.cloud">网关5</option>
-                        <option value="https://hardbin.com">网关6</option>
-                        <option value="https://dlunar.net">网关7</option>
-                        <option value="https://w3s.link">网关8</option>
-                        <option value="https://dweb.link">网关9</option>
-                        <option value="https://ipfs.infura-ipfs.io">网关10</option>
-                    </select>
-                </div>
-                <div class="button-group">
-                    <button onclick="selectFormat(this);" name="xkx" id="_url">URL</button>
-                    <button onclick="selectFormat(this);" name="xkx" id="_html">HTML</button>
-                    <button onclick="selectFormat(this);" name="xkx" id="_Ubb">UBB</button>
-                    <button onclick="selectFormat(this);" name="xkx" id="_markdown">MD</button>
-                </div>
+            <div class="title">
+                上传列表
+            </div>
+            <div class="select-group">
+                <label for="gatewaySelect">访问网关：</label>
+                <select id="gatewaySelect" onchange="changeGateway(this);">
+                    <option value="https://i0.img2ipfs.com">网关1</option>
+                    <option value="https://cdn.ipfsscan.io">国内网关</option>
+                    <option value="https://ipfs.io">官方网关</option>
+                    <option value="https://ipfs.crossbell.io">网关2</option>
+                    <option value="https://gateway.ipfsscan.io">网关3</option>
+                    <option value="https://ipfs.cyou">网关4</option>
+                    <option value="https://gateway.pinata.cloud">网关5</option>
+                    <option value="https://hardbin.com">网关6</option>
+                    <option value="https://dlunar.net">网关7</option>
+                    <option value="https://w3s.link">网关8</option>
+                    <option value="https://dweb.link">网关9</option>
+                    <option value="https://ipfs.infura-ipfs.io">网关10</option>
+                </select>
+            </div>
+            <div class="button-group">
+                <button onclick="selectFormat(this);" name="xkx" id="_url">URL</button>
+                <button onclick="selectFormat(this);" name="xkx" id="_html">HTML</button>
+                <button onclick="selectFormat(this);" name="xkx" id="_Ubb">UBB</button>
+                <button onclick="selectFormat(this);" name="xkx" id="_markdown">MD</button>
             </div>
             <div class="list"></div>
         </div>
