--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
                 上传列表
             </div>
             <div class="select-group">
+                <label for="uploadGatewaySelect">上传网关：</label>
+                <select id="uploadGatewaySelect">
+                    <option value="default">默认网关</option>
+                    <option value="pinata">Pinata 网关</option>
+                </select>
+            </div>
+            <div class="select-group">
                 <label for="gatewaySelect">访问网关：</label>
                 <select id="gatewaySelect" onchange="changeGateway(this);">
                     <option value="https://i0.img2ipfs.com">网关1</option>
