--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="viewport" content="width=device-width, initial-scale=1.0">
     <title>IPFS图床</title>
     <meta name="keywords" content="IPFS图床,IPFS,去中心化图床,永久图床">
     <link rel="shortcut icon" href="https://pic.rmb.bdstatic.com/bjh/7f258369bc7cae227053a6588adb2453.png">
@@ -33,8 +32,8 @@
             <div class="select-group">
                 <label for="uploadGatewaySelect">上传网关：</label>
                 <select id="uploadGatewaySelect">
-                    <option value="default">默认网关</option>
-                    <option value="pinata">Pinata 网关</option>
+                    <option value="img2ipfs">img2ipfs</option>
+                    <option value="pinata">Pinata</option>
                 </select>
             </div>
             <div class="select-group">
