--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <label for="uploadGatewaySelect">上传网关：</label>
                 <select id="uploadGatewaySelect">
                     <option value="img2ipfs">img2ipfs</option>
-                    <option value="pinata">Pinata</option>
+                    <option value="pinata">pinata</option>
                 </select>
             </div>
             <div class="select-group">
