--- a/index.html
+++ b/index.html
@@ -3,70 +3,114 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IPFS图床</title>
-    <meta name="keywords" content="IPFS图床,IPFS,去中心化图床,永久图床">
+    <title>IPFSBed - IPFS去中心化永久图床 | 免费图片托管服务</title>
+    <meta name="description" content="IPFSBed是基于IPFS的永久性去中心化图床,提供免费图片上传、存储和分享服务。支持拖拽、粘贴、点击上传,多节点加速确保访问速度。">
+    <meta name="keywords" content="IPFSBed,IPFS图床,去中心化存储,永久图床,免费图床,在线图床,Web3图床,区块链存储">
+    <meta property="og:site_name" content="IPFSBed">
+    <meta property="og:title" content="IPFSBed - IPFS去中心化永久图床">
+    <meta property="og:description" content="IPFSBed是基于IPFS的永久性去中心化图床,提供免费图片上传、存储和分享服务。支持拖拽、粘贴、点击上传,多节点加速确保访问速度。">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ipfsbed.is-an.org/">
+    <meta property="og:image" content="https://ipfsbed.is-an.org/static/logo.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="IPFSBed - IPFS去中心化永久图床">
+    <meta name="twitter:description" content="IPFSBed是基于IPFS的永久性去中心化图床,提供免费图片上传、存储和分享服务。">
+    <meta name="twitter:image" content="https://ipfsbed.is-an.org/static/logo.png">
+    <link rel="canonical" href="https://ipfsbed.is-an.org/">
+    <meta name="robots" content="index,follow">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "IPFSBed",
+      "url": "https://ipfsbed.is-an.org",
+      "description": "基于IPFS的去中心化永久图床服务",
+      "applicationCategory": "图床工具",
+      "operatingSystem": "All",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "CNY"
+      }
+    }
+    </script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png">
     <link rel="shortcut icon" href="https://pic.rmb.bdstatic.com/bjh/7f258369bc7cae227053a6588adb2453.png">
     <link rel="stylesheet" href="./static/style.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
     <script src="./static/file.js" defer></script>
 </head>
 <body>
-    <div id="upload-warning" class="upload-warning">
-        <p>第一次上传可能不成功，如果遇到上传失败请继续尝试。</p>
-    </div>
-    <input id="file" type="file" multiple style="display: none;">
-    <div class="container">
-        <div class="upload">
-            <div class="title">
-                IPFS图床<small style="font-size:10px;">(文件传到ipfs星际文件系统)</small>
+    <header>
+        <h1>IPFSBed - IPFS去中心化永久图床</h1>
+        <p>安全、永久、去中心化的图片存储与分享服务</p>
+    </header>
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/">首页</a></li>
+            <li class="breadcrumb-item active" aria-current="page">图片上传</li>
+        </ol>
+    </nav>
+    <main>
+        <div id="upload-warning" class="upload-warning">
+            <p>第一次上传可能不成功，如果遇到上传失败请继续尝试。</p>
+        </div>
+        <input id="file" type="file" multiple style="display: none;">
+        <div class="container">
+            <div class="upload">
+                <div class="title">
+                    IPFS图床<small style="font-size:10px;">(文件传到ipfs星际文件系统)</small>
+                </div>
+                <div class="content" id="dragbox">
+                    <svg class="icon" viewBox="0 0 1335 1024" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M1097.060174 392.125217C1073.730783 172.966957 893.261913 0.378435 666.089739 0.378435c-227.127652 0-415.610435 171.920696-430.948174 391.746782C101.910261 415.454609 0 525.356522 0 666.601739c0 149.147826 125.239652 274.476522 274.476522 274.476522h195.828869v-78.669913H274.476522a193.691826 193.691826 0 0 1-195.940174-195.806609c0-102.021565 70.678261-180.580174 172.588522-195.917913l54.561391-8.013913 8.013913-62.553043c16.005565-180.580174 172.588522-321.157565 352.389565-321.157566 180.580174 0 337.029565 141.356522 352.389565 321.157566v62.553043l62.664348 8.013913c101.910261 16.005565 172.477217 93.896348 172.477218 195.917913 0 109.901913-85.904696 195.806609-195.806609 195.806609h-195.917913v78.580869h196.029217c149.147826 0 274.476522-125.261913 274.476522-274.476521 0-141.133913-101.999304-259.072-235.25287-274.387479" fill="#909399"></path>
+                        <path d="M612.218435 364.766609l1.335652 2.003478L389.698783 590.58087l55.229217 55.362782 181.938087-181.938087V1018.88h78.558609v-78.58087h156.471652-156.471652V458.039652l183.808 183.919305 55.340521-55.340522-277.147826-277.058783-55.229217 55.229218z m-141.913044 575.666087h156.471652-156.716521 0.222608z" fill="#909399"></path>
+                    </svg>
+                    <p class="desc">点击上传 / 粘贴上传 / 拖拽上传</p>
+                    <p class="desc">永久的、去中心化保存和共享文件</p>
+                </div>
             </div>
-            <div class="content" id="dragbox">
-                <svg class="icon" viewBox="0 0 1335 1024" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M1097.060174 392.125217C1073.730783 172.966957 893.261913 0.378435 666.089739 0.378435c-227.127652 0-415.610435 171.920696-430.948174 391.746782C101.910261 415.454609 0 525.356522 0 666.601739c0 149.147826 125.239652 274.476522 274.476522 274.476522h195.828869v-78.669913H274.476522a193.691826 193.691826 0 0 1-195.940174-195.806609c0-102.021565 70.678261-180.580174 172.588522-195.917913l54.561391-8.013913 8.013913-62.553043c16.005565-180.580174 172.588522-321.157565 352.389565-321.157566 180.580174 0 337.029565 141.356522 352.389565 321.157566v62.553043l62.664348 8.013913c101.910261 16.005565 172.477217 93.896348 172.477218 195.917913 0 109.901913-85.904696 195.806609-195.806609 195.806609h-195.917913v78.580869h196.029217c149.147826 0 274.476522-125.261913 274.476522-274.476521 0-141.133913-101.999304-259.072-235.25287-274.387479" fill="#909399"></path>
-                    <path d="M612.218435 364.766609l1.335652 2.003478L389.698783 590.58087l55.229217 55.362782 181.938087-181.938087V1018.88h78.558609v-78.58087h156.471652-156.471652V458.039652l183.808 183.919305 55.340521-55.340522-277.147826-277.058783-55.229217 55.229218z m-141.913044 575.666087h156.471652-156.716521 0.222608z" fill="#909399"></path>
-                </svg>
-                <p class="desc">点击上传 / 粘贴上传 / 拖拽上传</p>
-                <p class="desc">永久的、去中心化保存和共享文件</p>
+            <div class="filelist">
+                <div class="title">
+                    上传列表
+                </div>
+                <div class="select-group">
+                    <label for="gatewaySelect">访问网关：</label>
+                    <select id="gatewaySelect" onchange="changeGateway(this);">
+                        <option value="https://i0.img2ipfs.com">网关1</option>
+                        <option value="https://cdn.ipfsscan.io">国内网关</option>
+                        <option value="https://ipfs.io">官方网关</option>
+                        <option value="https://ipfs.crossbell.io">网关2</option>
+                        <option value="https://gateway.ipfsscan.io">网关3</option>
+                        <option value="https://ipfs.cyou">网关4</option>
+                        <option value="https://gateway.pinata.cloud">网关5</option>
+                        <option value="https://hardbin.com">网关6</option>
+                        <option value="https://dlunar.net">网关7</option>
+                        <option value="https://w3s.link">网关8</option>
+                        <option value="https://dweb.link">网关9</option>
+                        <option value="https://ipfs.infura-ipfs.io">网关10</option>
+                    </select>
+                </div>
+                <div class="button-group">
+                    <button onclick="selectFormat(this);" name="xkx" id="_url">URL</button>
+                    <button onclick="selectFormat(this);" name="xkx" id="_html">HTML</button>
+                    <button onclick="selectFormat(this);" name="xkx" id="_Ubb">UBB</button>
+                    <button onclick="selectFormat(this);" name="xkx" id="_markdown">MD</button>
+                </div>
+                <div class="list"></div>
             </div>
         </div>
-        <div class="filelist">
-            <div class="title">
-                上传列表
-            </div>
-            <div class="select-group">
-                <label for="gatewaySelect">访问网关：</label>
-                <select id="gatewaySelect" onchange="changeGateway(this);">
-                    <option value="https://i0.img2ipfs.com">网关1</option>
-                    <option value="https://cdn.ipfsscan.io">国内网关</option>
-                    <option value="https://ipfs.io">官方网关</option>
-                    <option value="https://ipfs.crossbell.io">网关2</option>
-                    <option value="https://gateway.ipfsscan.io">网关3</option>
-                    <option value="https://ipfs.cyou">网关4</option>
-                    <option value="https://gateway.pinata.cloud">网关5</option>
-                    <option value="https://hardbin.com">网关6</option>
-                    <option value="https://dlunar.net">网关7</option>
-                    <option value="https://w3s.link">网关8</option>
-                    <option value="https://dweb.link">网关9</option>
-                    <option value="https://ipfs.infura-ipfs.io">网关10</option>
-                </select>
-            </div>
-            <div class="button-group">
-                <button onclick="selectFormat(this);" name="xkx" id="_url">URL</button>
-                <button onclick="selectFormat(this);" name="xkx" id="_html">HTML</button>
-                <button onclick="selectFormat(this);" name="xkx" id="_Ubb">UBB</button>
-                <button onclick="selectFormat(this);" name="xkx" id="_markdown">MD</button>
-            </div>
-            <div class="list"></div>
-        </div>
-    </div>
-    <div id="footer" style="position:fixed;width: 100%;text-align: center;bottom: 0px;display: block;">
-        <div style="height: 20px">
-            <div class="info">
-                <a href="https://github.com/bestZwei/ipfsbed">项目地址</a> | 
-                <a href="https://ipfs.github.io/public-gateway-checker/">更多网关</a>
-            </div>
-        </div>
-        © 2021-2024
-    </div>
+    </main>
+    <footer id="footer">
+        <nav>
+            <a href="https://github.com/bestZwei/ipfsbed" title="IPFSBed开源代码">GitHub</a> | 
+            <a href="https://ipfs.github.io/public-gateway-checker/" title="IPFS网关速度测试">网关检测</a> |
+            <a href="/terms" title="服务条款">服务条款</a> |
+            <a href="/privacy" title="隐私政策">隐私政策</a>
+        </nav>
+        <p>© 2024 IPFSBed - 去中心化永久图床服务</p>
+    </footer>
 </body>
 </html>
