Refactor upload interface: removed upload warning message and related styles, added new IPFS gateways to selection options, and streamlined event listener initialization in JavaScript.

--- a/index.html
+++ b/index.html
@@ -19,10 +19,6 @@
     <script src="./static/file.js" defer></script>
 </head>
 <body>
-    <div id="upload-warning" class="upload-warning">
-        <p>第一次上传可能不成功，如果遇到上传失败请继续尝试。</p>
-    </div>
-    <input id="file" type="file" multiple style="display: none;">
     <div class="container">
         <div class="upload">
             <div class="title">
@@ -56,6 +52,9 @@
                     <option value="https://w3s.link">网关8</option>
                     <option value="https://dweb.link">网关9</option>
                     <option value="https://ipfs.infura-ipfs.io">网关10</option>
+                    <option value="https://trustless-gateway.link">网关11</option>
+                    <option value="https://ipfs.runfission.com">网关12</option>
+                    <option value="https://4everland.io">网关13</option>
                 </select>
             </div>
             <div class="button-group">
