--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="./static/file.js" defer></script>
 </head>
 <body>
+    <input id="file" type="file" multiple style="display: none;">
     <div class="container">
         <div class="upload">
             <div class="title">
