fix: update gateway link to new IPFS checker

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div style="height: 20px">
             <div class="info">
                 <a href="https://github.com/bestZwei/ipfsbed">项目地址</a> | 
-                <a href="https://ipfs.github.io/public-gateway-checker/">更多网关</a>
+                <a href="https://check.ipfs.winx.run/">更多网关</a>
             </div>
         </div>
         © 2021-2024
