--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IPFS图床 - 永久的去中心化图片托管服务 | ipfsbed.is-an.org</title>
+    <title>IPFSBED - 永久的去中心化图片托管服务 | ipfsbed.is-an.org</title>
     <meta name="keywords" content="IPFS图床,IPFS,去中心化图床,永久图床,星际文件系统,图片托管,免费图床">
     <meta name="description" content="IPFS图床是一个基于IPFS(星际文件系统)的永久性、去中心化的图片托管服务。支持拖拽上传、粘贴上传等多种上传方式,提供多个可靠的访问网关。">
     <meta name="author" content="ipfsbed.is-an.org">
@@ -24,7 +24,7 @@
     <div class="container">
         <div class="upload">
             <div class="title">
-                IPFS图床<small style="font-size:10px;">(文件传到ipfs星际文件系统)</small>
+                IPFSBED<small style="font-size:10px;">(文件传到ipfs星际文件系统)</small>
             </div>
             <div class="content" id="dragbox">
                 <svg class="icon" viewBox="0 0 1335 1024" xmlns="http://www.w3.org/2000/svg">
@@ -80,12 +80,6 @@
                     </select>
                 </div>
             </div>
-            <div class="button-group">
-                <button onclick="selectFormat(this);" name="xkx" id="_url">URL</button>
-                <button onclick="selectFormat(this);" name="xkx" id="_html">HTML</button>
-                <button onclick="selectFormat(this);" name="xkx" id="_Ubb">UBB</button>
-                <button onclick="selectFormat(this);" name="xkx" id="_markdown">MD</button>
-            </div>
             <div class="list"></div>
         </div>
     </div>
@@ -96,7 +90,7 @@
                 <a href="https://check.ipfs.winx.run/">更多网关</a>
             </div>
         </div>
-        © 2021-2024
+        © 2021-2025
     </div>
 </body>
 </html>
