feat: add copy buttons for link formats and style enhancements

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                         <option value="https://ipfs-internal.xnftdata.com">xnftdata</option>
                         <option value="https://ipfs-12.yoghourt.cloud">yoghourt-12</option>
                     </select>
+                    <a class="copyall" onclick="copyAllLinks()" title="复制所有链接">复制全部</a>
                 </div>
             </div>
             <div class="list"></div>
