feat: add responsive styles for mobile layout optimization

--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
         </div>
     </div>
     <div id="footer" style="position:fixed;width: 100%;text-align: center;bottom: 0px;display: block;">
-        <div style="height: 20px">
+        <div style="height: auto; padding: 5px 0;">
             <div class="info">
                 <a href="https://github.com/bestZwei/ipfsbed">项目地址</a> | 
                 <a href="https://check.ipfs.winx.run/">更多网关</a>
             </div>
+            © 2021-2024
         </div>
-        © 2021-2024
     </div>
 </body>
 </html>
