feat: add new image asset and enhance layout for improved mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -34,10 +34,8 @@
                 <p class="desc">点击上传 / 粘贴上传 / 拖拽上传</p>
                 <p class="desc">永久的、去中心化保存和共享文件</p>
             </div>
-        </div>
-        <div class="filelist">
+        </div>        <div class="filelist">
             <div class="title">
-                上传列表
                 <div class="select-group">
                     <label for="gatewaySelect">访问网关：</label>
                     <select id="gatewaySelect" onchange="changeGateway(this);">
