--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="shortcut icon" href="/img/ipfsbed.png">
     <link rel="stylesheet" href="./static/style.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+    <script src="./static/langs.js"></script>
     <script src="./static/file.js" defer></script>
     <script defer src="https://umami.zwei.de.eu.org/script.js" data-website-id="9377510d-06c4-40da-ba16-c7442815c04c"></script>
     
@@ -54,7 +55,17 @@
     <div class="container">
         <div class="upload">
             <div class="title">
-                <img src="/img/ipfsbed.png" alt="IPFSBED Logo" width="24" height="24" style="vertical-align: middle; margin-right: 5px;">IPFSBED<small style="font-size:10px;">(文件传到ipfs星际文件系统)</small>
+                <img src="/img/ipfsbed.png" alt="IPFSBED Logo" width="24" height="24" style="vertical-align: middle; margin-right: 5px;">
+                <div class="lang-selector">
+                    <select id="langSelect" onchange="changeLanguage(this.value)">
+                        <option value="zh-CN">中文</option>
+                        <option value="en">English</option>
+                        <option value="de">Deutsch</option>
+                        <option value="ru">Русский</option>
+                        <option value="fr">Français</option>
+                        <option value="es">Español</option>
+                    </select>
+                </div>
             </div>
             <div class="content" id="dragbox">
                 <svg class="icon" viewBox="0 0 1335 1024" xmlns="http://www.w3.org/2000/svg" aria-label="上传文件图标">
@@ -64,7 +75,8 @@
                 <p class="desc">点击上传 / 粘贴上传 / 拖拽上传</p>
                 <p class="desc">永久的、去中心化保存和共享文件</p>
             </div>
-        </div>        <div class="filelist">
+        </div>
+        <div class="filelist">
             <div class="title">
                 <span class="title-text">上传列表</span>
                 <a class="copyall" onclick="copyAllLinks()" title="复制所有链接">复制全部</a>
@@ -121,8 +133,17 @@
                 <a href="https://github.com/bestZwei/ipfsbed">项目地址</a> | 
                 <a href="https://check.ipfs.winx.run/">更多网关</a>
             </div>
-            © 2021-2024 IPFSBED - 基于IPFS的去中心化图床服务
+            © 2021-2025 IPFSBED - 基于IPFS的去中心化图床服务
         </div>
     </div>
+    <script>
+        // Initialize language after DOM is ready
+        document.addEventListener('DOMContentLoaded', function() {
+            // Set the language selector to the current language
+            document.querySelector('#langSelect').value = currentLang;
+            // Update all UI elements with translations
+            updatePageLanguage();
+        });
+    </script>
 </body>
 </html>
