feat: add support for additional languages in the language selector and translations

--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
                         <option value="ru">Русский</option>
                         <option value="fr">Français</option>
                         <option value="es">Español</option>
+                        <option value="ar">العربية</option>
+                        <option value="fa">فارسی</option>
+                        <option value="tr">Türkçe</option>
+                        <option value="pt">Português</option>
+                        <option value="ko">한국어</option>
+                        <option value="ja">日本語</option>
                     </select>
                 </div>
             </div>
