--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <option value="fa">فارسی</option>
                         <option value="tr">Türkçe</option>
                         <option value="pt">Português</option>
-                        <option value="ko">한국어</option>
+                        <option value="ko">조선어</option>
                         <option value="ja">日本語</option>
                     </select>
                 </div>
