--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     
     <link rel="shortcut icon" href="/img/ipfsbed.png">
     <link rel="stylesheet" href="./static/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
     <script src="./static/langs.js"></script>
     <script src="./static/file.js" defer></script>
@@ -55,7 +56,10 @@
     <div class="container">
         <div class="upload">
             <div class="title">
-                <img src="/img/ipfsbed.png" alt="IPFSBED Logo" width="24" height="24" style="vertical-align: middle; margin-right: 5px;">
+                <div class="title-text">
+                    <img src="/img/ipfsbed.png" alt="IPFSBED Logo" width="28" height="28" style="vertical-align: middle; margin-right: 8px;">
+                    IPFSBED
+                </div>
                 <div class="lang-selector">
                     <select id="langSelect" onchange="changeLanguage(this.value)">
                         <option value="zh-CN">中文</option>
@@ -84,12 +88,21 @@
         </div>
         <div class="filelist">
             <div class="title">
-                <span class="title-text">上传列表</span>
-                <a class="copyall" onclick="copyAllLinks()" title="复制所有链接">复制全部</a>
+                <span class="title-text">
+                    <i class="fas fa-list-ul" style="margin-right: 8px;"></i>
+                    上传列表
+                </span>
+                <a class="copyall" onclick="copyAllLinks()" title="复制所有链接">
+                    <i class="fas fa-copy" style="margin-right: 5px;"></i>
+                    复制全部
+                </a>
             </div>
             <div class="gateway-selector">
                 <div class="select-group">
-                    <label for="gatewaySelect">访问网关：</label>
+                    <label for="gatewaySelect">
+                        <i class="fas fa-server" style="margin-right: 5px;"></i>
+                        访问网关：
+                    </label>
                     <select id="gatewaySelect" onchange="changeGateway(this);">
                         <option value="https://i0.img2ipfs.com">img2ipfs</option>
                         <option value="https://cdn.ipfsscan.io">cdn-ipfsscan</option>
@@ -136,8 +149,8 @@
     <div id="footer" style="position:fixed;width: 100%;text-align: center;bottom: 0px;display: block;">
         <div style="height: auto; padding: 5px 0;">
             <div class="info">
-                <a href="https://github.com/bestZwei/ipfsbed">项目地址</a> | 
-                <a href="https://check.ipfs.winx.run/">更多网关</a>
+                <a href="https://github.com/bestZwei/ipfsbed"><i class="fab fa-github" style="margin-right: 5px;"></i>项目地址</a> | 
+                <a href="https://check.ipfs.winx.run/"><i class="fas fa-network-wired" style="margin-right: 5px;"></i>更多网关</a>
             </div>
             © 2021-2025 IPFSBED - 基于IPFS的去中心化图床服务
         </div>
