add URL display and copy all button functionality for uploaded files

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                     <i class="fas fa-list-ul" style="margin-right: 8px;"></i>
                     上传列表
                 </span>
-                <a class="copyall" onclick="copyAllLinks()" title="复制所有链接">
-                    <i class="fas fa-copy" style="margin-right: 5px;"></i>
+                <a href="javascript:void(0);" class="copyall" onclick="copyAllLinks()" title="复制所有链接">
+                    <i class="fas fa-copy"></i>
                     复制全部
                 </a>
             </div>
